Implemented the ability to add an employee to the DB from the app + some corresponding GUI changes

--- a/images.qrc
+++ b/images.qrc
@@ -16,5 +16,7 @@
         <file>images/viberLogo.png</file>
         <file>images/youtubeLogo.png</file>
         <file>images/refresh.png</file>
+        <file>images/addWorker.png</file>
+        <file>images/serviceWorker.png</file>
     </qresource>
 </RCC>
