--- a/OrderCreation.ui
+++ b/OrderCreation.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>887</width>
-    <height>580</height>
+    <width>873</width>
+    <height>701</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -121,6 +121,19 @@
        </item>
       </layout>
      </item>
+     <item row="0" column="1" colspan="3">
+      <widget class="QLabel" name="technicalLabel">
+       <property name="minimumSize">
+        <size>
+         <width>30</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="1">
       <widget class="QLabel" name="label_12">
        <property name="text">
@@ -199,6 +212,13 @@
       </widget>
      </item>
      <item row="3" column="2">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>VIN-номер</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="3">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Скидки</string>
@@ -249,6 +269,29 @@
       </widget>
      </item>
      <item row="4" column="2">
+      <widget class="QLineEdit" name="lineEdit_3">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="3">
       <widget class="QLineEdit" name="lineEdit_4">
        <property name="font">
         <font>
@@ -311,14 +354,23 @@
        </item>
       </layout>
      </item>
-     <item row="6" column="0">
+     <item row="8" column="0">
+      <widget class="QTextEdit" name="textEdit">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
       <widget class="QLabel" name="label_11">
        <property name="text">
         <string>Отзыв клиента</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="3">
+     <item row="6" column="2">
       <widget class="QPushButton" name="pushButton">
        <property name="font">
         <font>
@@ -334,37 +386,14 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0" rowspan="2">
-      <widget class="QLineEdit" name="lineEdit_8">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
-}</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="3">
+     <item row="6" column="3">
       <widget class="QLabel" name="label_10">
        <property name="text">
         <string>Стоимость ремонта</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="3">
+     <item row="7" column="3">
       <widget class="QLineEdit" name="lineEdit_5">
        <property name="font">
         <font>
@@ -381,19 +410,6 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="3">
-      <widget class="QLabel" name="technicalLabel">
-       <property name="minimumSize">
-        <size>
-         <width>30</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
   </layout>
@@ -405,13 +421,9 @@
   <tabstop>lineEdit_7</tabstop>
   <tabstop>lineEdit</tabstop>
   <tabstop>lineEdit_2</tabstop>
-  <tabstop>lineEdit_4</tabstop>
   <tabstop>tableView_2</tabstop>
   <tabstop>tableWidget</tabstop>
   <tabstop>tableView</tabstop>
-  <tabstop>lineEdit_8</tabstop>
-  <tabstop>pushButton</tabstop>
-  <tabstop>lineEdit_5</tabstop>
  </tabstops>
  <resources>
   <include location="images.qrc"/>
