Changing translations after app's restart (dynamic change is to be done) + added Global class with register interaction

--- a/StartWindow.ui
+++ b/StartWindow.ui
@@ -375,7 +375,7 @@ QPushButton:hover {
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
