Implemented the ability to create an order to the DB from the app and view orders history. (Order creation is to be a bit redone)

--- a/StartWindow.ui
+++ b/StartWindow.ui
@@ -515,7 +515,7 @@ border:none;
              </property>
              <property name="maximumSize">
               <size>
-               <width>104</width>
+               <width>16777215</width>
                <height>16777215</height>
               </size>
              </property>
