--- a/images.qrc
+++ b/images.qrc
@@ -18,5 +18,6 @@
         <file>images/refresh.png</file>
         <file>images/addWorker.png</file>
         <file>images/serviceWorker.png</file>
+        <file>images/addOrder.png</file>
     </qresource>
 </RCC>
