mplemented the ability to add an client to the DB from the app + completed list of clients + classes names now match common style

--- a/AddEmployee.ui
+++ b/AddEmployee.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AddWorker</class>
- <widget class="QDialog" name="AddWorker">
+ <class>AddEmployee</class>
+ <widget class="QDialog" name="AddEmployee">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>646</width>
-    <height>138</height>
+    <height>142</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -156,8 +156,40 @@
      </item>
      <item row="3" column="4">
       <widget class="QPushButton" name="saveWorkerButton">
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+	background-color: #dbdcf7;
+	border: 1px solid #999999;
+}
+
+QPushButton:hover {
+	background-color: #d5d6f0;
+	border: 1px solid #acacac;
+}
+
+QPushButton:pressed {
+	background-color: #cbcde6;
+	border: 2px solid #999999;
+}</string>
+       </property>
        <property name="text">
-        <string>Save</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="images.qrc">
+         <normaloff>:/images/save.png</normaloff>:/images/save.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>30</width>
+         <height>30</height>
+        </size>
        </property>
       </widget>
      </item>
