--- a/ListOrders.ui
+++ b/ListOrders.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>OrdersHistory</class>
- <widget class="QDialog" name="OrdersHistory">
+ <class>ListOrders</class>
+ <widget class="QDialog" name="ListOrders">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>История заказов</string>
+   <string>Список заказов</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
