--- a/ListSpareParts.ui
+++ b/ListSpareParts.ui
@@ -114,7 +114,7 @@ QPushButton:pressed {
        </widget>
       </item>
       <item row="0" column="2">
-       <widget class="QPushButton" name="orderCreationButton">
+       <widget class="QPushButton" name="addSparePartButton">
         <property name="minimumSize">
          <size>
           <width>40</width>
