--- a/UpdateEmployee.ui
+++ b/UpdateEmployee.ui
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ViewEmployee</class>
- <widget class="QDialog" name="ViewEmployee">
+ <class>UpdateEmployee</class>
+ <widget class="QDialog" name="UpdateEmployee">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>558</width>
-    <height>162</height>
+    <width>573</width>
+    <height>221</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Информация о сотруднике</string>
+   <string>Редактирование информации о сотруднике</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="1">
-    <widget class="QPushButton" name="updateEmployeeInfoButton">
+   <item row="0" column="0">
+    <widget class="QPushButton" name="backToViewInfoButton">
      <property name="minimumSize">
       <size>
        <width>40</width>
@@ -43,55 +43,61 @@ QPushButton:pressed {
      </property>
      <property name="icon">
       <iconset resource="images.qrc">
-       <normaloff>:/images/edit.png</normaloff>:/images/edit.png</iconset>
+       <normaloff>:/images/backToView.png</normaloff>:/images/backToView.png</iconset>
      </property>
      <property name="iconSize">
       <size>
-       <width>32</width>
-       <height>32</height>
+       <width>27</width>
+       <height>27</height>
       </size>
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
+   <item row="2" column="2">
+    <widget class="QPushButton" name="saveUpdatedInfo">
+     <property name="minimumSize">
       <size>
        <width>40</width>
-       <height>20</height>
+       <height>40</height>
       </size>
      </property>
-    </spacer>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="3" colspan="2">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Должность</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="serviceNumber">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
+     <property name="styleSheet">
+      <string notr="true">QPushButton {
+	background-color: #dbdcf7;
+	border: 1px solid #999999;
+}
+
+QPushButton:hover {
+	background-color: #d5d6f0;
+	border: 1px solid #acacac;
+}
+
+QPushButton:pressed {
+	background-color: #cbcde6;
+	border: 2px solid #999999;
 }</string>
-       </property>
-       <property name="frame">
-        <bool>true</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="images.qrc">
+       <normaloff>:/images/save.png</normaloff>:/images/save.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>27</width>
+       <height>27</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0" colspan="3">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>ФИО сотрудника</string>
        </property>
       </widget>
      </item>
@@ -115,8 +121,8 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLineEdit" name="hourlyPayment">
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="serviceNumber">
        <property name="font">
         <font>
          <pointsize>10</pointsize>
@@ -135,13 +141,6 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="0" column="0" colspan="3">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>ФИО сотрудника</string>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="2">
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
@@ -155,17 +154,23 @@ QPushButton:pressed {
        </property>
       </spacer>
      </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Номер СТО</string>
+     <item row="3" column="0">
+      <widget class="QLineEdit" name="hourlyPayment">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
        </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Почасовая оплата</string>
+       <property name="styleSheet">
+        <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+       </property>
+       <property name="frame">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -202,7 +207,41 @@ QPushButton:pressed {
        </property>
       </spacer>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Почасовая оплата</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3" colspan="2">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Должность</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Номер СТО</string>
+       </property>
+      </widget>
+     </item>
     </layout>
+   </item>
+   <item row="0" column="1">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
